<resources>
    <string name="app_name">Treant Reading</string>
    <string name="book_list">Book List</string>
    <string name="favorites">Favorites</string>
    <string name="garden">Garden</string>
    <string name="me">Me</string>
    <string name="pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="release_to_refresh">Release to Refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="refresh_complete">Refresh complete</string>
    <string name="never_refresh">Never Refresh</string>
    <string name="just_refresh">Just Refresh</string>
    <string name="refreshed_minutes_ago">Refreshed %1s Minutes Ago</string>
    <string name="refreshed_hours_before">Refreshed %1s Hours Before</string>
    <string name="refreshed_days_before">Refreshed %1s Days Before</string>
    <string name="loading">Loading</string>
    <string name="loading_success">Loading Success</string>
    <string name="loading_failed">Loading Failed</string>
    <string name="loading_complete">Loading Complete</string>
    <string name="release_to_load_more">Release to Load More</string>
    <string name="every_item_has_been_loaded">Every Item Has Been Loaded</string>
    <string name="total_words">Total Words</string>
    <string name="new_words">New Words</string>
    <string name="evaluation">Evaluation</string>
    <string name="image_of_book_cover">Image of Book Cover</string>
    <string name="image_of_evaluation">Image of Evaluation</string>
    <string name="image_of_pull_arrow">Image of Pull Arrow</string>
</resources>
