<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytHeader"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/bottom_border_only"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical">

        <ImageView
            android:id="@+id/imgDirectionArrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/image_of_pull_arrow"
            android:src="@drawable/ic_arrow_down" />

        <ProgressBar
            android:id="@+id/rfv_header_progressbar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:indeterminateDrawable="@drawable/progressbar_rotate"
            android:indeterminateDuration="1600"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:gravity="start|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRefreshState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pull_down_to_refresh"
            android:textColor="@color/standardLightText" />

        <TextView
            android:id="@+id/tvLastRefreshTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/never_refresh"
            android:textColor="@color/standardLightText"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>